--- a/modular/index.html
+++ b/modular/index.html
@@ -5,11 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Painel de controle</title>
 
-    <link rel="stylesheet" href="./style.css">
-
-    <script src="./script-delegation.js" defer></script>
-    <!-- <script src="./script-direto.js" defer></script> -->
-    <!-- <script src="./script-foreach.js" defer></script>  -->
+    <link rel="stylesheet" href="./style-modules.css">
+    <script type="module" src="./js/main.js" defer></script>
 
 </head>
 <body>
